<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:orientation="horizontal">

        <ImageButton
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@drawable/default_photo"
            android:layout_weight="1"
            android:onClick="clickedMainMeal"/>

        <ImageButton
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@drawable/suppe"
            android:layout_weight="1"
            android:onClick="clickedSoup"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/mainmeal"
            android:textColor="@color/textLightPrimary"
            android:background="@color/colorPrimary"
            android:gravity="center"/>

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/soup"
            android:textColor="@color/textLightPrimary"
            android:background="@color/colorSoup"
            android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:orientation="horizontal">

        <ImageButton
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@drawable/salat"
            android:layout_weight="1"
            android:onClick="clickedSalad"/>

        <ImageButton
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@drawable/kuchen"
            android:layout_weight="1"
            android:onClick="clickedCake"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/salad"
            android:textColor="@color/textLightPrimary"
            android:background="@color/colorSalad"
            android:gravity="center"/>

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cake"
            android:textColor="@color/textLightPrimary"
            android:background="@color/colorCake"
            android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:orientation="horizontal">

        <ImageButton
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@drawable/dessert"
            android:layout_weight="1"
            android:onClick="clickedDessert"/>

        <ImageButton
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@drawable/other"
            android:layout_weight="1"
            android:onClick="clickedOther"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dessert"
            android:textColor="@color/textLightPrimary"
            android:background="@color/colorDessert"
            android:gravity="center"/>

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/other"
            android:textColor="@color/textLightPrimary"
            android:background="@color/colorOther"
            android:gravity="center"/>
    </LinearLayout>
</LinearLayout>