<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="6">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="3"
        android:layout_weight="1"
        android:id="@+id/main_layout">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/default_photo"
            android:background="@color/colorPrimary"
            android:scaleType="fitCenter"
            android:layout_weight="1"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:text="@string/mainmeal"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="@color/textLightPrimary"
        android:layout_weight="2" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="3"
        android:layout_weight="1"
        android:id="@+id/salad_layout">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/salat"
            android:background="@color/colorSalad"
            android:scaleType="fitCenter"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorSalad"
            android:text="@string/salad"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/textLightPrimary"
            android:layout_weight="2" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="3"
        android:layout_weight="1"
        android:id="@+id/soup_layout">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/suppe"
            android:background="@color/colorSoup"
            android:scaleType="fitCenter"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorSoup"
            android:text="@string/soup"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/textLightPrimary"
            android:layout_weight="2" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="3"
        android:layout_weight="1"
        android:id="@+id/cake_layout">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/kuchen"
            android:background="@color/colorCake"
            android:scaleType="fitCenter"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorCake"
            android:text="@string/cake"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/textLightPrimary"
            android:layout_weight="2" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="3"
        android:layout_weight="1"
        android:id="@+id/dessert_layout">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/dessert"
            android:background="@color/colorDessert"
            android:scaleType="fitCenter"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorDessert"
            android:text="@string/dessert"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/textLightPrimary"
            android:layout_weight="2" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="3"
        android:layout_weight="1"
        android:id="@+id/other_layout">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/other"
            android:background="@color/colorOther"
            android:scaleType="fitCenter"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorOther"
            android:text="@string/other"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/textLightPrimary"
            android:layout_weight="2" />
    </LinearLayout>

</LinearLayout>